--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "better-scroll": "^2.0.0-beta.10",
     "immutable": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
+    "swiper": "^8.0.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
